Fix Shift react breadcrumbs to use flexbox for placement

--- a/admin/client/src/components/Breadcrumb/Breadcrumb.scss
+++ b/admin/client/src/components/Breadcrumb/Breadcrumb.scss
@@ -6,6 +6,10 @@
   max-height: $toolbar-height;
 }
 
+.breadcrumb__container {
+  max-height: $toolbar-height;
+}
+
 .breadcrumb>li.breadcrumb__item--last, // TODO Fix Bootstrap clash
 .breadcrumb__item--last {
   display: block;
